Bug 310177 - Birthdays are not fetched when year is not set
Summary: Birthdays are not fetched when year is not set
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: Google Resource (other bugs)
Version First Reported In: 4.9
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Daniel Vrátil
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-15 22:29 UTC by km
Modified: 2012-11-22 18:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.4.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description km 2012-11-15 22:29:37 UTC
Google contacts resource fetches birthdays from Google only when the year is set. I know that Kaddressbook doesn't alow for birthadys without year (https://bugs.kde.org/show_bug.cgi?id=190782), but until this is fixed, please use some workaround, because when some other data in such a contact is changed, the birthday is lost also on Google.
The year could be set to 1000 for example. 

Reproducible: Always
Comment 1 Daniel Vrátil 2012-11-22 18:34:24 UTC
Git commit 8851b04dcc8cb0c7c1b2e57e5a3984ae39f408e2 by Dan Vrátil.
Committed on 22/11/2012 at 19:26.
Pushed by dvratil into branch 'LibKGAPI/0.4'.

Set fake year for birthday dates without year

Google supports birthdays without year specified, but KDE
does not, so we have to set a fake year (1900) when this
happens so that we get a valid QDate.
FIXED-IN: 0.4.4

M  +28   -4    libkgapi/services/contacts.cpp

http://commits.kde.org/akonadi-google/8851b04dcc8cb0c7c1b2e57e5a3984ae39f408e2
Comment 2 Daniel Vrátil 2012-11-22 18:34:25 UTC
Git commit 1d2f6b64e444f370d107c13f802f119a37dd2bfc by Dan Vrátil.
Committed on 22/11/2012 at 19:26.
Pushed by dvratil into branch 'master'.

Set fake year for birthday dates without year

Google supports birthdays without year specified, but KDE
does not, so we have to set a fake year (1900) when this
happens so that we get a valid QDate.
FIXED-IN: 0.4.4

M  +28   -4    libkgapi/services/contacts.cpp

http://commits.kde.org/akonadi-google/1d2f6b64e444f370d107c13f802f119a37dd2bfc