Set fake year for birthday dates without year

Google supports birthdays without year specified, but KDE
does not, so we have to set a fake year (1900) when this
happens so that we get a valid QDate.

BUG: 310177
FIXED-IN: 0.4.4